adding function and map to replace missing values

--- a/p8105_hw5_tal2145.md
+++ b/p8105_hw5_tal2145.md
@@ -2,4 +2,34 @@ Homework 5
 ================
 Troy Layouni
 
+## Problem 1
 
+**Loading in `iris` dataset with missing values**
+
+``` r
+set.seed(10)
+
+iris_with_missing = iris %>% 
+  map_df(~replace(.x, sample(1:150, 20), NA)) %>%
+  mutate(Species = as.character(Species))
+```
+
+#### Writing a function to replace missing values
+
+  - missing numeric values are filled in with the mean of non-missing
+    values
+  - missing character values are filled in with \`“virginica”
+
+<!-- end list -->
+
+``` r
+fix_missing = function(x) {
+  if (is.numeric(x)) {
+    replace_na(x, mean(x, na.rm = TRUE))
+  } else if (is.character(x)) {
+  replace_na(x, "virginica")
+  }
+}
+
+output = map_dfr(iris_with_missing, fix_missing)
+```
