--- a/p8105_hw5_tal2145.Rmd
+++ b/p8105_hw5_tal2145.Rmd
@@ -5,6 +5,51 @@ output: github_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+library(viridis)
+library(tidyverse)
+
+knitr::opts_chunk$set(
+	echo = TRUE,
+	warning = FALSE,
+	fig.width = 8, 
+  fig.height = 6,
+  out.width = "90%"
+)
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
+```
+
+## Problem 1
+
+**Loading in `iris` dataset with missing values**
+
+```{r load_iris_with_missing}
+set.seed(10)
+
+iris_with_missing = iris %>% 
+  map_df(~replace(.x, sample(1:150, 20), NA)) %>%
+  mutate(Species = as.character(Species))
+```
+
+#### Writing a function to replace missing values 
+
+* missing numeric values are filled in with the mean of non-missing values 
+* missing character values are filled in with `"virginica"
+
+```{r}
+fix_missing = function(x) {
+  if (is.numeric(x)) {
+    replace_na(x, mean(x, na.rm = TRUE))
+  } else if (is.character(x)) {
+  replace_na(x, "virginica")
+  }
+}
+
+output = map_dfr(iris_with_missing, fix_missing)
 ```
 
