--- a/p8105_hw5_tal2145.Rmd
+++ b/p8105_hw5_tal2145.Rmd
@@ -58,12 +58,11 @@ iris_no_missing = map_dfr(iris_with_missing, fix_missing)
 
 **Loading and tidying control and experimental arm data** 
 
-* creating dataframe with all file names
-* reading in all files from each subject
-* 
+* reading in all files from each subject into one dataframe
+* tidying data to include 4 columns with study arm, id, week and 
+
 
 ```{r study_data_load}
-
 read_files = function(file) {
   study_data = read_csv(file)
 }
@@ -76,17 +75,18 @@ join_data =
     all_files = str_c(path_base, file_name)) %>% 
   mutate(study_data = map(all_files, read_files)) %>% 
   unnest() %>% 
-  select(-all_files) 
-  
-
-
-
-
-
-
-
-
-
-
+  select(-all_files) %>% 
+  separate(file_name, into = c("study_arm", "subject_id"), sep = "\\_") %>% 
+  pivot_longer(
+    week_1:week_8, 
+    names_to = "week", 
+    values_to = "observation"
+    ) %>% 
+  mutate(
+    subject_id = str_replace(subject_id, ".csv", ""),
+    week = str_replace(week, "week_", ""),
+    study_arm = str_replace(study_arm, "con", "control"),
+    study_arm = str_replace(study_arm, "exp", "experimental")
+)
 ```
 
