--- a/p8105_hw5_tal2145.md
+++ b/p8105_hw5_tal2145.md
@@ -36,7 +36,7 @@ iris_no_missing = map_dfr(iris_with_missing, fix_missing)
 
 ## Problem 2
 
-**Loading and tidying control and experimental arm data**
+#### Part 1: Loading and tidying control and experimental arm data\*\*
 
   - reading in all files from each subject into one dataframe
   - tidying data to include 4 columns with study arm, id, week and
@@ -50,7 +50,7 @@ read_files = function(file) {
 
 path_base = "./data/"
 
-join_data = 
+study_data = 
   tibble(
     file_name = list.files(path = "./data/"),
     all_files = str_c(path_base, file_name)) %>% 
@@ -291,3 +291,26 @@ join_data =
     ##   week_7 = col_double(),
     ##   week_8 = col_double()
     ## )
+
+#### Part 2: Making a spaghetti plot showing observations over time and differences between study arms
+
+``` r
+study_data %>% 
+  group_by(study_arm, subject_id) %>% 
+  
+  ggplot(aes(x = week, y = observation, color = study_arm, group = interaction(study_arm, subject_id))) +
+  #geom_point() + 
+  geom_line() +
+    labs(
+   title = "Subject Observations Over Time",
+   x = "Week",
+   y = "Observation"
+  ) 
+```
+
+<img src="p8105_hw5_tal2145_files/figure-gfm/unnamed-chunk-1-1.png" width="90%" />
+
+Looking at the spaghetti plot where yellow represents the experimental
+arm and purple represents the control arm, we see that the values of
+weekly observation for the experimental subjects is higher on average
+than that of the control arm.
