--- a/p8105_hw5_tal2145.Rmd
+++ b/p8105_hw5_tal2145.Rmd
@@ -122,11 +122,11 @@ Looking at the spaghetti plot where yellow represents the experimental arm and p
 ```{r}
 set.seed(1)
 
-sim_regression = function(n, beta0 = 2, beta1 = 0) {
+sim_regression = function(n = 30, beta0 = 2, beta1 = 0) {
    
   sim_data = tibble(
-    x = rnorm(n, mean = 0, sd = 50^0.5),
-    y = beta0 + beta1 * x + rnorm(n, 0, 1)
+    x = rnorm(n, mean = 0, sd = 1),
+    y = beta0 + beta1 * x + rnorm(n, 0, 50^0.5)
   )
   
   ls_fit = lm(y  ~ x, data = sim_data)
@@ -145,11 +145,31 @@ sim_regression = function(n, beta0 = 2, beta1 = 0) {
 sim_results = 
   tibble(beta1 = c(0, 1, 2, 3, 4, 5, 6)) %>% 
   mutate(
-    output_lists = map(.x = beta1, ~rerun(10000, sim_regression(n = 30))),
+    output_lists = map(.x = beta1, ~rerun(1000, sim_regression(beta1 = .x))),
     estimate_dfs = map(output_lists, bind_rows)) %>%
   select(-output_lists) %>% 
   unnest(estimate_dfs)
 ```
 
+#### Part 3: Plotting the proportion of times the null was rejected (power) and the true value of  β1. 
+
+```{r}
+sim_results %>% 
+  group_by(beta1) %>% 
+  mutate(
+    p_rejected = mean(p.value < 0.05)
+  ) %>% 
+  distinct(beta1, p_rejected) %>% 
+  
+  ggplot(aes(x = beta1, y = p_rejected)) +
+  geom_col() +
+  labs(
+    title = "Comparing Effect Size to Power",
+   x = "Effect Size (β1)",
+   y = "Power"
+  ) 
+```
+
+Looking at the plot above, we see that as effect size or β1 increases, power, or probability of correctly rejecting the null hypothesis also increases. 
 
 
