Explanation for plots in question 3

--- a/p8105_hw5_tal2145.md
+++ b/p8105_hw5_tal2145.md
@@ -40,7 +40,7 @@ iris_no_missing = map_dfr(iris_with_missing, fix_missing)
 
 -----
 
-#### Part 1: Loading and tidying control and experimental arm data\*\*
+#### Part 1: Loading and tidying control and experimental arm data
 
   - reading in all files from each subject into one dataframe
   - tidying data to include 4 columns with study arm, id, week and
@@ -392,14 +392,12 @@ Looking at the plot above, we see that as effect size or β1 increases,
 power, or probability of correctly rejecting the null hypothesis also
 increases.
 
-#### Part 4: Plotting
+#### Part 4: Plotting Mean Estimated β1 by True β1 Values
 
-Make a plot showing the average estimate of β̂ 1 on the y axis and the
-true value of β1 on the x axis. Make a second plot (or overlay on the
-first) the average estimate of β̂ 1 only in samples for which the null
-was rejected on the y axis and the true value of β1 on the x axis. Is
-the sample average of β̂ 1 across tests for which the null is rejected
-approximately equal to the true value of β1? Why or why not?
+  - Plotting mean estimated β1 by true β1 values among all samples and
+    just samples where the null hypothesis was rejected
+
+<!-- end list -->
 
 ``` r
 sim_results %>% 
@@ -431,10 +429,22 @@ sim_results %>%
   ggplot(aes(x = beta1, y = mean_beta1_hat_reject)) +
   geom_col() +
   labs(
-    title = "Comparing the True Value of β1 to the Mean Estimated β1 Among Those Samples Where the Null was Rejected",
+    title = "True Value of β1 to the Mean Estimated β1 Among Samples Where the Null was Rejected",
     x = "True β1",
     y = "Estimated β1"
   ) 
 ```
 
 <img src="p8105_hw5_tal2145_files/figure-gfm/unnamed-chunk-5-2.png" width="90%" />
+
+When comparing the average estimate of β1 in all samples to the average
+estimate of β1 in the samples for which the null was rejected, we see
+that at lower values of β1, the value deviates from the true β1. For
+example when the true β1 is 1, the estimate for the rejected samples is
+close to 3, whereas in the plot with average β1 for all samples, the
+value is much closer to the truth of 1. As the effect size increases,
+the difference between the truth and the estimate for rejected sample
+β1’s is closer to the true value. This difference at small values of
+β1 is because at small effect sizes, power is low and we are less
+likely to correctly reject the null hypothesis. At higher effect sizes,
+our power is increased, so we see a better approximation of β1.
