--- a/p8105_hw5_tal2145.Rmd
+++ b/p8105_hw5_tal2145.Rmd
@@ -9,6 +9,7 @@ library(viridis)
 library(tidyverse)
 library(readr)
 library(ggridges)
+library(patchwork)
 
 knitr::opts_chunk$set(
 	echo = TRUE,
@@ -95,7 +96,7 @@ study_data =
 
 #### Part 2: Making a spaghetti plot showing observations over time and differences between study arms
 
-```{r}
+```{r spaghetti_plot}
 study_data %>% 
   group_by(study_arm, subject_id) %>% 
   
@@ -119,7 +120,7 @@ Looking at the spaghetti plot where yellow represents the experimental arm and p
 * creating linear model with a  β0 of 2, a variance of 50
 * using `broom::tidy` to clean the linear model output and keep only the estimate for  β1 and the p-value
 
-```{r}
+```{r regression_function}
 set.seed(1)
 
 sim_regression = function(n = 30, beta0 = 2, beta1 = 0) {
@@ -139,21 +140,21 @@ sim_regression = function(n = 30, beta0 = 2, beta1 = 0) {
 }
 ```
 
-#### Part 2: Running a simulation 10000 times for varying values of β1
+#### Part 2: Running a simulation 10,000 times for varying values of β1
 
-```{r}
+```{r simulation}
 sim_results = 
   tibble(beta1 = c(0, 1, 2, 3, 4, 5, 6)) %>% 
   mutate(
-    output_lists = map(.x = beta1, ~rerun(1000, sim_regression(beta1 = .x))),
+    output_lists = map(.x = beta1, ~rerun(10000, sim_regression(beta1 = .x))),
     estimate_dfs = map(output_lists, bind_rows)) %>%
   select(-output_lists) %>% 
   unnest(estimate_dfs)
 ```
 
-#### Part 3: Plotting the proportion of times the null was rejected (power) and the true value of  β1. 
+#### Part 3: Plotting the proportion of times the null was rejected (power) and the true value of β1. 
 
-```{r}
+```{r power_plot}
 sim_results %>% 
   group_by(beta1) %>% 
   mutate(
@@ -176,7 +177,8 @@ Looking at the plot above, we see that as effect size or β1 increases, power, o
 
 * Plotting mean estimated β1 by true β1 values among all samples and just samples where the null hypothesis was rejected
 
-```{r}
+```{r effect_size_estimates_plot}
+all_samples =
 sim_results %>% 
   group_by(beta1) %>% 
   mutate(
@@ -185,13 +187,15 @@ sim_results %>%
   distinct(beta1, mean_beta1_hat) %>% 
   
   ggplot(aes(x = beta1, y = mean_beta1_hat)) +
-  geom_col() +
+  geom_point() +
+  geom_line() +
   labs(
-    title = "Comparing the True Value of β1 to the Mean Estimated β1",
+    title = "Estimated β1 in All Samples",
     x = "True β1",
     y = "Estimated β1"
   )
 
+rejected_samples = 
 sim_results %>% 
   filter(p.value < 0.05) %>%   group_by(beta1) %>% 
   mutate(
@@ -200,15 +204,18 @@ sim_results %>%
   distinct(beta1, mean_beta1_hat_reject) %>%
  
   ggplot(aes(x = beta1, y = mean_beta1_hat_reject)) +
-  geom_col() +
+  geom_point() +
+  geom_line() +
   labs(
-    title = "True Value of β1 to the Mean Estimated β1 Among Samples Where the Null was Rejected",
+    title = "Estimated β1 Among Samples Where the Null was Rejected",
     x = "True β1",
     y = "Estimated β1"
   ) 
+
+all_samples + rejected_samples + plot_annotation(title = "Comparing Estimates of Effect Size to the True Effect Size") 
 ```
 
-When comparing the average estimate of β1 in all samples to the average estimate of β1 in the samples for which the null was rejected, we see that at lower values of β1, the value deviates from the true β1. For example when the true β1 is 1, the estimate for the rejected samples is close to 3, whereas in the plot with average β1 for all samples, the value is much closer to the truth of 1. As the effect size increases, the difference between the truth and the estimate for rejected sample β1's is closer to the true value. This difference at small values of β1 is because at small effect sizes, power is low and we are less likely to correctly reject the null hypothesis. At higher effect sizes, our power is increased, so we see a better approximation of β1. 
+When comparing the average estimate of β1 in all samples to the average estimate of β1 in the samples for which the null was rejected, we see that at lower values of β1, the value deviates from the true β1. For example when the true β1 is 1, the estimate for the rejected samples is close to 3, whereas in the plot with average β1 for all samples, the value is much closer to the truth of 1. As the effect size increases, the difference between the truth and the estimate for rejected sample β1's is closer to the true value. This difference at small values of β1 is because at small effect sizes, power is low and we are less likely to correctly reject the null hypothesis and we therefore overestimate our effect size. At higher effect sizes, our power is increased, so we see a better approximation of β1. 
 
 
 
