--- a/p8105_hw5_tal2145.md
+++ b/p8105_hw5_tal2145.md
@@ -312,7 +312,7 @@ study_data %>%
   ) 
 ```
 
-<img src="p8105_hw5_tal2145_files/figure-gfm/unnamed-chunk-1-1.png" width="90%" />
+<img src="p8105_hw5_tal2145_files/figure-gfm/spaghetti_plot-1.png" width="90%" />
 
 Looking at the spaghetti plot where yellow represents the experimental
 arm and purple represents the control arm, we see that the values of
@@ -355,13 +355,13 @@ sim_regression = function(n = 30, beta0 = 2, beta1 = 0) {
 }
 ```
 
-#### Part 2: Running a simulation 10000 times for varying values of β1
+#### Part 2: Running a simulation 10,000 times for varying values of β1
 
 ``` r
 sim_results = 
   tibble(beta1 = c(0, 1, 2, 3, 4, 5, 6)) %>% 
   mutate(
-    output_lists = map(.x = beta1, ~rerun(1000, sim_regression(beta1 = .x))),
+    output_lists = map(.x = beta1, ~rerun(10000, sim_regression(beta1 = .x))),
     estimate_dfs = map(output_lists, bind_rows)) %>%
   select(-output_lists) %>% 
   unnest(estimate_dfs)
@@ -386,7 +386,7 @@ sim_results %>%
   ) 
 ```
 
-<img src="p8105_hw5_tal2145_files/figure-gfm/unnamed-chunk-4-1.png" width="90%" />
+<img src="p8105_hw5_tal2145_files/figure-gfm/power_plot-1.png" width="90%" />
 
 Looking at the plot above, we see that as effect size or β1 increases,
 power, or probability of correctly rejecting the null hypothesis also
@@ -400,6 +400,7 @@ increases.
 <!-- end list -->
 
 ``` r
+all_samples =
 sim_results %>% 
   group_by(beta1) %>% 
   mutate(
@@ -408,17 +409,15 @@ sim_results %>%
   distinct(beta1, mean_beta1_hat) %>% 
   
   ggplot(aes(x = beta1, y = mean_beta1_hat)) +
-  geom_col() +
+  geom_point() +
+  geom_line() +
   labs(
-    title = "Comparing the True Value of β1 to the Mean Estimated β1",
+    title = "Estimated β1 in All Samples",
     x = "True β1",
     y = "Estimated β1"
   )
-```
 
-<img src="p8105_hw5_tal2145_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
-
-``` r
+rejected_samples = 
 sim_results %>% 
   filter(p.value < 0.05) %>%   group_by(beta1) %>% 
   mutate(
@@ -427,15 +426,18 @@ sim_results %>%
   distinct(beta1, mean_beta1_hat_reject) %>%
  
   ggplot(aes(x = beta1, y = mean_beta1_hat_reject)) +
-  geom_col() +
+  geom_point() +
+  geom_line() +
   labs(
-    title = "True Value of β1 to the Mean Estimated β1 Among Samples Where the Null was Rejected",
+    title = "Estimated β1 Among Samples Where the Null was Rejected",
     x = "True β1",
     y = "Estimated β1"
   ) 
+
+all_samples + rejected_samples + plot_annotation(title = "Comparing Estimates of Effect Size to the True Effect Size") 
 ```
 
-<img src="p8105_hw5_tal2145_files/figure-gfm/unnamed-chunk-5-2.png" width="90%" />
+<img src="p8105_hw5_tal2145_files/figure-gfm/effect_size_estimates_plot-1.png" width="90%" />
 
 When comparing the average estimate of β1 in all samples to the average
 estimate of β1 in the samples for which the null was rejected, we see
@@ -446,5 +448,6 @@ value is much closer to the truth of 1. As the effect size increases,
 the difference between the truth and the estimate for rejected sample
 β1’s is closer to the true value. This difference at small values of
 β1 is because at small effect sizes, power is low and we are less
-likely to correctly reject the null hypothesis. At higher effect sizes,
-our power is increased, so we see a better approximation of β1.
+likely to correctly reject the null hypothesis and we therefore
+overestimate our effect size. At higher effect sizes, our power is
+increased, so we see a better approximation of β1.
